Controller Pro 1.0.11
=====================

Bug Fixes:

  - Reliability updates to Russound integration (Torbjorn Osterdahl) (ORCJAVA-376)
  - Guard against null pointer exception in RRD logger lifecycle
    (Juha Lindfors) (ORCJAVA-356)

Controller Pro 1.0.10
=====================

New Features:

  - Add Port Abstraction Daemon (PAD) source files to project (ORCJAVA-314 + ORCJAVA-375)
  - EnOcean Implementation (Rainer Hitz) (ORCJAVA-348)
  - Rewrite TCP for EventListener interface (Marcus Redeker) (ORCJAVA-298)

Bug Fixes:

  - Fix an NPE in lagarto command caused by undetermined
    initialization order between ExecutableCommand and
    EventListener implementations (Juha Lindfors) (ORCJAVA-346)

Controller Pro 1.0.9
====================

New Features:

  - Include Web Console 2.1.0, r7746 (ORCJAVA-333)
  
Bug Fixes:

  - ISY-99 implementation does not scale to high number of
    sensors (Kevin Purney) (ORCJAVA-325)
  - Telnet status read for switch sensors appears broken. A returned
    'on' string is never correctly parsed to Java boolean value true
    due to the extra linefeed '\n' character being added to all response
    values in readString() implementation (ORCJAVA-326)
  - Telnet log configuration (ORCJAVA-328)
  - The controller build script does not mandate an explicit character
    encoding for all Java compiler tasks. This causes issues on some
    systems with incompatible default character set/locale. This patch
    enforces UTF-8 encoding on all compiled source files. (ORCJAVA-329)
  - Updates the core controller classes (excluding protocol 
    implementations, these are updated in separate tasks) to use 
    locale independent string conversions (ORCJAVA-332)
  - Restlet ClientResource was released too soon (before resource
    content was consumed), causing a NPE.
    Fixed by moving release call in finally block after processing. (ORCJAVA-295)

Controller Pro 1.0.8
====================

New Features:
